feat: add inspect_gguf binary to Cargo.toml
Add a new binary target named "inspect_gguf" with path "src/bin/inspect_gguf.rs" to enable building an executable for inspecting GGUF files. This expands the project's functionality by providing a dedicated tool for GGUF file inspection.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,11 @@ cc = "1.0"
 name = "phase12_benchmark"
 harness = false
 
+# Binaries
+[[bin]]
+name = "inspect_gguf"
+path = "src/bin/inspect_gguf.rs"
+
 [features]
 default = []
 rocm = []
