feat: add test_inference binary for inference testing
- Added a new binary target named "test_inference" with path "test_inference.rs" to Cargo.toml
- Enables testing of inference functionality in the project

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,10 @@ harness = false
 name = "inspect_gguf"
 path = "src/bin/inspect_gguf.rs"
 
+[[bin]]
+name = "test_inference"
+path = "test_inference.rs"
+
 [features]
 default = []
 rocm = []
