feat(28-09): remove rocm feature from Cargo.toml
- Removed `rocm = []` feature definition
- Updated default from `[]` to `["simd"]` (CPU SIMD is optional)
- ROCm/HIP is core to ROCmForge - AMD GPU inference engine
- HIP kernels should always be compiled unconditionally

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -118,8 +118,8 @@ name = "test_inference"
 path = "test_inference.rs"
 
 [features]
-default = []
-rocm = []
+# ROCm/HIP is always-on for ROCmForge - AMD GPU inference engine
+default = ["simd"]
 # Enable SIMD CPU backend (requires nightly Rust)
 simd = []
 # Enable AVX-512 code paths (opt-in due to CPU throttling concerns)
